site: fix aside on mobile

--- a/site/src/pages/document/index.styl
+++ b/site/src/pages/document/index.styl
@@ -236,7 +236,7 @@ $aside-width = 260px
                 position fixed
                 z-index $max-z-index
                 height 100%
-                transform translateX(-201px)
+                transform translateX(unit(-($aside-width + 1), px))
                 transition transform $transition
                 &.expanded
                     transform translateX(0)
